load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//tools:defs.bzl", "TOOLCHAIN_BINARIES")
load(":bootstrap_binary.bzl", "bootstrap_binary")
load(":fdo_profile.bzl", "llvm_fdo_profile_data")

# bootstrap toolchains are declared top level

[
    bootstrap_binary(
        name = tool,
        actual = "@llvm-project//llvm",
        fdo_profile = ":llvm_fdo_profdata",
        visibility = ["//visibility:public"],
    )
    for tool in TOOLCHAIN_BINARIES
]

sh_binary(
    name = "llvm_fdo_profile_runner",
    srcs = ["llvm_fdo_profile_runner.sh"],
)

llvm_fdo_profile_data(
    name = "llvm_fdo_profdata",
    src = "zstd_training.cc",
    clangxx = select({
        "//platforms/config:linux_x86_64": "//toolchain:instrumented_linux_x86_64/bin/clang++",
        "//platforms/config:linux_aarch64": "//toolchain:instrumented_linux_aarch64/bin/clang++",
    }),
    data = select({
        "//platforms/config:linux_x86_64": [
            "//toolchain:instrumented_linux_x86_64/bin/ld.lld",
            "//toolchain:instrumented_linux_x86_64/bin/lld",
            "//toolchain:instrumented_linux_x86_64/bin/wasm-ld",
            "//toolchain:instrumented_linux_x86_64/clang_builtin_headers_include_directory",
        ],
        "//platforms/config:linux_aarch64": [
            "//toolchain:instrumented_linux_aarch64/bin/ld.lld",
            "//toolchain:instrumented_linux_aarch64/bin/lld",
            "//toolchain:instrumented_linux_aarch64/bin/wasm-ld",
            "//toolchain:instrumented_linux_aarch64/clang_builtin_headers_include_directory",
        ],
    }),
    llvm_profdata = "//tools:llvm-profdata",
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = ["@llvm_zstd//:zstd"],
)

bzl_library(
    name = "bootstrap_binary",
    srcs = ["bootstrap_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":transition_settings",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:copy_to_directory",
    ],
)

bzl_library(
    name = "fdo_profile",
    srcs = ["fdo_profile.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":transition_settings",
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
        "@rules_cc//cc/private/rules_impl/fdo:srcs",
    ],
)

bzl_library(
    name = "transition_settings",
    srcs = ["transition_settings.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "declare_toolchains",
    srcs = ["declare_toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":bootstrap_binary",
        "//platforms:common",
        "//toolchain:cc_toolchain",
        "@llvm_config//:version",
        "@rules_cc//cc/toolchains:toolchain_rules",
    ],
)
