load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//toolchain/args:llvm_target_triple.bzl", "LLVM_TARGET_TRIPLE")
load("//tools:defs.bzl", "TOOLCHAIN_BINARIES")
load(":bootstrap_binary.bzl", "bootstrap_binary")
load(":fdo_profile.bzl", "llvm_fdo_profile_data")

# bootstrap toolchains are declared top level

[
    bootstrap_binary(
        name = tool,
        actual = "@llvm-project//llvm",
        fdo_profile = ":llvm_fdo_profdata",
        visibility = ["//visibility:public"],
    )
    for tool in TOOLCHAIN_BINARIES
]

llvm_fdo_profile_data(
    name = "llvm_fdo_profdata",
    src = "zstd_training.c",
    builtin_headers = select({
        "//platforms/config:linux_x86_64": "//toolchain:instrumented_linux_x86_64/clang_builtin_headers_include_directory",
        "//platforms/config:linux_aarch64": "//toolchain:instrumented_linux_aarch64/clang_builtin_headers_include_directory",
    }),
    clangxx = select({
        "//platforms/config:linux_x86_64": "//toolchain:instrumented_linux_x86_64/bin/clang++",
        "//platforms/config:linux_aarch64": "//toolchain:instrumented_linux_aarch64/bin/clang++",
    }),
    crt_objects = "//runtimes:crt_objects_directory",
    data = select({
        "//platforms/config:linux_x86_64": [
            "//toolchain:instrumented_linux_x86_64/bin/ld.lld",
            "//toolchain:instrumented_linux_x86_64/bin/lld",
            "//toolchain:instrumented_linux_x86_64/bin/wasm-ld",
        ],
        "//platforms/config:linux_aarch64": [
            "//toolchain:instrumented_linux_aarch64/bin/ld.lld",
            "//toolchain:instrumented_linux_aarch64/bin/lld",
            "//toolchain:instrumented_linux_aarch64/bin/wasm-ld",
        ],
    }),
    kernel_headers = "@kernel_headers//:kernel_headers_directory",
    libc_headers = "//runtimes/glibc:glibc_headers_include_search_directory",
    libc_library_search = "//runtimes/glibc:glibc_library_search_directory",
    llvm_profdata = "@llvm-project//llvm:llvm-profdata",
    resource_dir = "//runtimes:resource_directory",
    sanitizer_headers = "//sanitizers:sanitizers_headers_include_search_directory",
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    target_triple = LLVM_TARGET_TRIPLE,
    visibility = ["//visibility:public"],
    zstd_headers = "@llvm_fdo_zstd//:headers",
    zstd_srcs = "@llvm_fdo_zstd//:sources",
)

bzl_library(
    name = "bootstrap_binary",
    srcs = ["bootstrap_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":transition_settings",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:copy_to_directory",
    ],
)

bzl_library(
    name = "fdo_profile",
    srcs = ["fdo_profile.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":transition_settings",
        "@rules_cc//cc/private/rules_impl/fdo:srcs",
    ],
)

bzl_library(
    name = "transition_settings",
    srcs = ["transition_settings.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "declare_toolchains",
    srcs = ["declare_toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":bootstrap_binary",
        "//platforms:common",
        "//toolchain:cc_toolchain",
        "@llvm_config//:version",
        "@rules_cc//cc/toolchains:toolchain_rules",
    ],
)
