load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(":declare_abis_constraints.bzl", "declare_abis_constraints")

package(default_visibility = ["//visibility:public"])

declare_abis_constraints()

bzl_library(
    name = "abis",
    srcs = ["abis.bzl"],
)

bzl_library(
    name = "declare_abis_constraints",
    srcs = ["declare_abis_constraints.bzl"],
    deps = [":abis"],
)
