load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":autoconf_inventory_targets.bzl", "declare_autoconf_inventory_targets")

package(default_visibility = ["//visibility:public"])

declare_autoconf_inventory_targets()

sh_test(
    name = "shared_elf_test",
    srcs = ["libstdcxx_shared_elf_test.sh"],
    data = [
        "//runtimes/libstdcxx:libstdcxx.shared",
        "//runtimes/libstdcxx:libstdcxx_shared_linker_name",
        "//runtimes/libstdcxx:libstdcxx_shared_soname",
        "@llvm//tools:llvm-readelf",
    ],
    env = {
        "LIBSTDCXX_SHARED": "$(rootpath //runtimes/libstdcxx:libstdcxx.shared)",
        "LIBSTDCXX_SHARED_LINKER_NAME": "$(rootpath //runtimes/libstdcxx:libstdcxx_shared_linker_name)",
        "LIBSTDCXX_SHARED_SONAME": "$(rootpath //runtimes/libstdcxx:libstdcxx_shared_soname)",
        "READELF": "$(rootpath @llvm//tools:llvm-readelf)",
    },
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

write_file(
    name = "libstdcxx_link_smoke_src",
    out = "libstdcxx_link_smoke.cc",
    content = [
        "#include <stdexcept>",
        "#include <string>",
        "#include <vector>",
        "",
        "int main() {",
        "  std::vector<std::string> values;",
        "  values.emplace_back(\"libstdc++\");",
        "  if (values.front().size() != 9) throw std::runtime_error(\"bad string\");",
        "  return 0;",
        "}",
    ],
)

cc_binary(
    name = "toolchain_dynamic_link_smoke",
    srcs = [":libstdcxx_link_smoke_src"],
    linkstatic = False,
    target_compatible_with = select({
        "//constraints/cxxstdlib:libstdcxx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + [
        "@platforms//os:linux",
    ],
)
